feat: Implement user registration and enhance login functionality with improved error handling and UI updates

--- a/src/app/user/login/login.html
+++ b/src/app/user/login/login.html
@@ -6,7 +6,7 @@
     </div>
 
     <form #formLogin="ngForm" (ngSubmit)="onLogin(formLogin)" class="login-modal__form">
-        <label for="Email">Email</label>
+        <label for="Email">Email | Nazwa Użytkownika</label>
         <input
             type="email"
             id="Email"
