--- a/src/app/user/register/register.scss
+++ b/src/app/user/register/register.scss
@@ -3,7 +3,7 @@
 	min-height: 520px;
 	margin: 0 auto;
 	padding: 3rem 2.5rem;
-	background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+	background: linear-gradient(120deg, #cc0808 0%, #fd9800 100%);
 	border-radius: 0;
 	color: #f5f5f5;
 	display: flex;
